Fix date not fully visible

--- a/public/css/events.css
+++ b/public/css/events.css
@@ -41,7 +41,7 @@
 .event-date {
     font-size: 2.5rem;
     overflow: hidden;
-    height: 2.5rem;
+    height: 3rem;
 }
 .event-date span {
     transform: translateY(100%);
